--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="Nome_da_Conta"> Nome Banco </string>
     <string name="Saldo_da_Conta"> Saldo Atual </string>
     <string name="Valor_da_Conta"> R$ 3.000,00 </string>
+    <string name="todo">TODO</string>
+    <string name="todo1">TODO</string>
+    <string name="todo2">TODO</string>
+    <string name="todo3">TODO</string>
 </resources>
